Add --full-name argument for accounts
Also, suppress some warnings on running tests

--- a/gcg/pyproject.toml
+++ b/gcg/pyproject.toml
@@ -64,7 +64,7 @@ target-version = ["py39", "py310", "py311", "py312"]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_functions = ["test_*"]
-addopts = "-v --tb=short"
+addopts = "-v --tb=short --disable-warnings"
 filterwarnings = [
     "ignore::sqlalchemy.exc.SAWarning",
 ]
